Landing Page done

--- a/index.html
+++ b/index.html
@@ -1,13 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Weather</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="color-scheme" content="light dark" />
 
+    <!-- Google Icons -->
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=cloud"
+    />
+
+    <!-- Pico CSS -->
+    <link rel="stylesheet" href="node_modules/@picocss/pico/css/pico.min.css" />
+
+    <!-- Animate CSS -->
+    <link rel="stylesheet" href="node_modules/animate.css/animate.css" />
+
+    <!-- My SCSS -->
     <link rel="stylesheet" href="styles.css" />
+
+    <title>Odin Weather App</title>
   </head>
   <body>
-    <script defer src="app.js"></script>
+    <header class="container-fluid"></header>
+
+    <main></main>
+
+    <section id="input-ctn" class="container"></section>
+    hello
+    <footer>
+      <p>Made with 💙 by <a href="https://github.com/Zaibbee69">Zaibbee</a></p>
+    </footer>
+    <script defer type="module" src="app.js"></script>
   </body>
 </html>
