--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
     <!-- Google Icons -->
     <link
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=ac_unit,air,airwave,cloud,cloudy_snowing,deblur,foggy,hail,help,humidity_high,location_on,nightlight,nights_stay,partly_cloudy_day,rainy,thunderstorm,tornado,wb_sunny"
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=airwave,cloud,humidity_high,location_on"
     />
 
     <!-- Pico CSS -->
@@ -34,141 +34,13 @@
     <header class="container-fluid"></header>
 
     <main>
-      <section id="current-ctn">
-        <div>
-          <hgroup>
-            <h1 class="current-temp">
-              16<sup><small>&deg;C</small></sup>
-            </h1>
-            <h2 class="current-conditions">Storm With Rain</h2>
-          </hgroup>
-        </div>
-        <div>
-          <div>
-            <hgroup>
-              <h3>
-                <span class="material-symbols-outlined airwave"> airwave </span
-                >Wind
-              </h3>
-              <h5>2.4 Km\h</h5>
-            </hgroup>
-          </div>
-          <div>
-            <hgroup>
-              <h3>
-                <span class="material-symbols-outlined humidity">
-                  humidity_high </span
-                >Humidity
-              </h3>
-              <h5>70%</h5>
-            </hgroup>
-          </div>
-        </div>
-      </section>
-      <section id="weather-img-ctn">
-        <span class="material-symbols-outlined cloud"> cloud </span>
-      </section>
-      <section class="glass-card" id="week-ctn">
-        <div class="day-ctn">
-          <span class="material-symbols-outlined day-icon"> cloud </span>
+      <section id="current-ctn"></section>
 
-          <hgroup>
-            <h2>Friday</h2>
-            <h3>Cloudy With Rain</h3>
-          </hgroup>
+      <section id="weather-img-ctn"></section>
 
-          <h3>
-            16<sup><small>&deg;C</small></sup>
-          </h3>
-        </div>
-        <hr />
-        <div class="day-ctn">
-          <span class="material-symbols-outlined day-icon"> cloud </span>
+      <section class="glass-card" id="week-ctn"></section>
 
-          <hgroup>
-            <h2>Friday</h2>
-            <h3>Cloudy With Rain</h3>
-          </hgroup>
-
-          <h3>
-            16<sup><small>&deg;C</small></sup>
-          </h3>
-        </div>
-        <hr />
-        <div class="day-ctn">
-          <span class="material-symbols-outlined day-icon"> cloud </span>
-
-          <hgroup>
-            <h2>Friday</h2>
-            <h3>Cloudy With Rain</h3>
-          </hgroup>
-
-          <h3>
-            16<sup><small>&deg;C</small></sup>
-          </h3>
-        </div>
-        <hr />
-        <div class="day-ctn">
-          <span class="material-symbols-outlined day-icon"> cloud </span>
-
-          <hgroup>
-            <h2>Friday</h2>
-            <h3>Cloudy With Rain</h3>
-          </hgroup>
-
-          <h3>
-            16<sup><small>&deg;C</small></sup>
-          </h3>
-        </div>
-        <hr />
-      </section>
-      <section id="days-ctn">
-        <div class="glass-box single-day">
-          <h1>1 PM</h1>
-          <hgroup>
-            <h2>
-              20<sup><small>&deg;C</small></sup>
-            </h2>
-            <h3>Cloudy</h3>
-          </hgroup>
-        </div>
-        <div class="glass-box single-day">
-          <h1>1 PM</h1>
-          <hgroup>
-            <h2>
-              20<sup><small>&deg;C</small></sup>
-            </h2>
-            <h3>Cloudy</h3>
-          </hgroup>
-        </div>
-        <div class="glass-box single-day">
-          <h1>1 PM</h1>
-          <hgroup>
-            <h2>
-              20<sup><small>&deg;C</small></sup>
-            </h2>
-            <h3>Cloudy</h3>
-          </hgroup>
-        </div>
-        <div class="glass-box single-day">
-          <h1>1 PM</h1>
-          <hgroup>
-            <h2>
-              20<sup><small>&deg;C</small></sup>
-            </h2>
-            <h3>Cloudy</h3>
-          </hgroup>
-        </div>
-        <div class="glass-box single-day">
-          <h1>1 PM</h1>
-          <hgroup>
-            <h2>
-              20<sup><small>&deg;C</small></sup>
-            </h2>
-            <h3>Cloudy</h3>
-          </hgroup>
-        </div>
-      </section>
+      <section id="days-ctn"></section>
     </main>
 
     <section id="input-ctn" class="container"></section>
