Core functionality working also added animations to components need to make search functionality and final touch uups

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <!-- Google Icons -->
     <link
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=ac_unit,air,airwave,cloud,cloudy_snowing,deblur,foggy,hail,help,humidity_high,location_on,nightlight,nights_stay,partly_cloudy_day,rainy,thunderstorm,tornado,wb_sunny"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=ac_unit,air,airwave,cloud,cloudy_snowing,deblur,foggy,hail,help,humidity_high,location_on,nightlight,nights_stay,partly_cloudy_day,rainy,rainy_snow,thunderstorm,tornado,wb_sunny"
       rel="stylesheet"
     />
 
@@ -33,6 +33,11 @@
   <body>
     <header class="container-fluid"></header>
 
+    <span
+      class="material-symbols-outlined styler animate__animated animate__swing animate__slower animate__delay-2s animate__infinite"
+    >
+      partly_cloudy_night
+    </span>
     <main>
       <section id="current-ctn"></section>
 
