--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <!-- Google Icons -->
     <link
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=ac_unit,air,airwave,cloud,cloudy_snowing,deblur,foggy,hail,help,humidity_high,location_on,nightlight,nights_stay,partly_cloudy_day,rainy,rainy_snow,thunderstorm,tornado,wb_sunny"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=ac_unit,air,airwave,cloud,cloudy_snowing,deblur,foggy,hail,help,humidity_high,line_start_arrow,location_on,nightlight,nights_stay,partly_cloudy_day,rainy,rainy_snow,thunderstorm,tornado,wb_sunny"
       rel="stylesheet"
     />
 
@@ -49,9 +49,15 @@
     </main>
 
     <section id="input-ctn" class="container"></section>
+
+    <section id="description-ctn" class="container-fluid"></section>
     <footer>
       <p>Made with 💙 by <a href="https://github.com/Zaibbee69">Zaibbee</a></p>
     </footer>
+    <!-- Fuse.js -->
+    <script src="https://cdn.jsdelivr.net/npm/fuse.js/dist/fuse.min.js"></script>
+
+    <!-- App.js -->
     <script defer type="module" src="app.js"></script>
   </body>
 </html>
