--- a/index.html
+++ b/index.html
@@ -19,11 +19,17 @@
       rel="stylesheet"
     />
 
-    <!-- Pico CSS -->
-    <link rel="stylesheet" href="node_modules/@picocss/pico/css/pico.min.css" />
+    <!-- PicoCSS CDN -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css"
+    />
 
-    <!-- Animate CSS -->
-    <link rel="stylesheet" href="node_modules/animate.css/animate.css" />
+    <!-- Animate.css CDN -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
 
     <!-- My SCSS -->
     <link rel="stylesheet" href="styles.css" />
